--- a/public/index.html
+++ b/public/index.html
@@ -1,22 +1,20 @@
 <!DOCTYPE html>
-<html
-    lang="en"
->
-    <head>
-        <meta
-            charset="utf-8"
-        />
-        <meta
-            name="viewport"
-            content="width=device-width,initial-scale=1.0"
-        />
-        <title>
-            Formation Vue
-        </title>
-    </head>
-    <body>
-        <div
-            id="app"
-        ></div>
-    </body>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <title>Formation Vue</title>
+    <style>
+      html,
+      body {
+        height: 100%;
+        width: 100%;
+        margin: 0;
+        padding: 0;
+      }
+    </style>
+  </head>
+  <body>
+    <div id="app"></div>
+  </body>
 </html>
